--- a/1.html
+++ b/1.html
@@ -56,19 +56,7 @@ body {
 </style>
 </head>
 <body>
-<div class="sidenav">
-<a href="1.html">🌐【WordPress Penetration Testing】🖧</a>
-  <a href="2.html">🌐【PenTesting Lab Setup: Squid Proxy &  Burpsuite Payloads】🖧</a>
-  <a href="3.html">🌐【Beginner Guide to Google Dorks】🖧</a>
-  <a href="4.html">🌐【Introduction to Command Injection】🖧</a>
- <a href="5.html">🌐【WebServer Shell-ing through PhpMyAdmin】🖧</a>
-  <a href="6.html">🌐【Comprehensive Guide on FFUF & HTTPX】🖧</a>
-  <a href="7.html">🌐【Comprehensive Guide on HTML & XXE Injection】🖧</a>
-<a href="8.html">🌐【NetCat for PenTesting & Web Framework Reverse Shell】🖧</a>
-  <a href="9.html">🌐【Web Shells Penetration Testing】🖧</a>
-  <a href="10.html">🌐【Database Penetration Testing】🖧</a>
- <p align="center"><img src="https://pwa-audio-player.digitalskeleton.com.ng/p.jpg" height="90" width="200"></p> 
-</div>
+  //side nav removed
 <div class="main">
 <div class="markdown-heading" dir="auto">
 <h2 class="heading-element" dir="auto" tabindex="-1"><p align="left">🌐WordPress Penetration Testing🖧</p></h2>
