--- a/1.html
+++ b/1.html
@@ -7,19 +7,19 @@ body {
   font-family: "Lato", sans-serif;
 }
 .main {
-        height: 100%;
-        width: 1020px;
-        position: scroll;
-        z-index: 1;
-        top: 0;
-        left: 0;
+        height:;
+        width:;
+        position:;
+        z-index:;
+        top:;
+        left:;
         background-color: #fff;
-        overflow-x: scroll;
-        overflow-y: scroll;
-        padding-top: 0px;
+        overflow-x:;
+        overflow-y:;
+        padding-top:;
     }
 .main {
-  margin-left: 240px; /* Same as the width of the sidenav */
+  margin-left:0px; /* Same as the width of the sidenav */
   font-size: 28px; /* Increased text to enable scrolling */
   padding: 0px 10px;
 }
