--- a/1.html
+++ b/1.html
@@ -24,8 +24,10 @@ body {
   padding: 0px 10px;
 }
 
-@media screen and (max-height: 450px) {
+@media screen and (max-width: 450px) {
 }
+
+
 </style>
 </head>
 <body>
