--- a/1.html
+++ b/1.html
@@ -7,16 +7,16 @@ body {
   font-family: "Lato", sans-serif;
 }
 .main {
-        height:;
-        width:;
-        position:;
-        z-index:;
-        top:;
-        left:;
+        height: 100%;
+        width: 1020px;
+        position: scroll;
+        z-index: 1;
+        top: 0;
+        left: 0;
         background-color: #fff;
-        overflow-x:;
-        overflow-y:;
-        padding-top:;
+        overflow-x: scroll;
+        overflow-y: scroll;
+        padding-top: 0px;
     }
 .main {
   margin-left: 240px; /* Same as the width of the sidenav */
